// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col can hide columns 1`] = `
<Col
  className="xsHidden smHidden mdVisible lgVisible xlHidden padding"
  md={1}
  sm={0}
  xl={0}
  xs={true}
>
  <div
    className="col-xs col-sm-0 col-md-1 col-xl-0 xsHidden smHidden mdVisible lgVisible xlHidden padding"
  >
    Some content
  </div>
</Col>
`;

exports[`Col renders 1`] = `
<Col
  className="xsVisible smVisible mdVisible lgVisible xlVisible padding"
  xs={true}
>
  <div
    className="col-xs xsVisible smVisible mdVisible lgVisible xlVisible padding"
  >
    Some content
  </div>
</Col>
`;
